--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,36 +1,13 @@
-[package]
-authors = ["Karim Agha <karim.dev@gmail.com>", "Marius Ciubotariu <marius.ciubotariu@gmail.com>"]
-description = "Synchronized shadow state of Solana programs available for off-chain processing."
-edition = "2018"
-homepage = "https://github.com/hubble-markets/solana-shadow"
-include = ["examples/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
-keywords = ["blockchain", "solana", "web3"]
-license = "Apache-2.0"
-name = "solana-shadow"
-repository = "https://github.com/hubble-markets/solana-shadow"
-version = "0.2.5"
+[workspace]
+members = [
+    "programs/*"
+]
 
-[dependencies]
-base64 = "0.13"
-borsh = "0.9"
-borsh-derive = "0.9"
-bs58 = "0.4"
-dashmap = "5.0.0"
-futures = "0.3"
-hyper-tls = "0.5.0"
-serde = {version = "1", features = ["derive"]}
-serde_json = "1"
-solana-client = "1.8.3"
-solana-sdk = "1.8.3"
-thiserror = "1"
-tokio = {version = "1.13", features = ["full"]}
-tokio-tungstenite = {version = "0.16.1", features = ["native-tls"]}
-tracing = "0.1.29"
-tracing-futures = "0.2.5"
-zstd = "0.9"
-
-[dev-dependencies]
-anyhow = "1"
-pyth-client = "0.2.2"
-rand = "0.8"
-tracing-subscriber = {version = "0.3.1", features = ["env-filter"]}
+[profile.release]
+overflow-checks = true
+lto = "fat"
+codegen-units = 1
+[profile.release.build-override]
+opt-level = 3
+incremental = false
+codegen-units = 1
